# vocab-grinder

./: .gitignore  list_db.db  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/repository/: Cargo.toml
src-tauri/repository/src/: lib.rs  models.rs  schema.rs
src-tauri/src/: main.rs  tokenizer.rs
src-tauri/vocab_finder/: Cargo.toml
src-tauri/vocab_finder/src/: lib.rs
src/components/: CreateForm.jsx  DetailListView.jsx  ListView.jsx  SideBar.jsx
