workspace = { members = [ "repository", "vocab_finder"] }
[package]
name = "vocab-grinder"
version = "0.0.1"
description = "A Tauri App"
authors = ["Pjiwm"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
vocab_finder = { path = "vocab_finder"}
repository = { path = "repository"}

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
